[P4ADEV-3524] AssessmentsEntityExtendedController.updateStatus API and add operatorExternalUserId to Assessments
