# src/main/java/it/gov/pagopa/pu/classification/controller/AssessmentsController.java
@@ -46,9 +46,9 @@ public class AssessmentsController implements AssessmentsControllerApi {
   }
 
   @Override
-  public ResponseEntity<Assessments> createAssessment(Long organizationId, String assessmentName, String debtPositionTypeOrgCode) {
-    log.info("User requested createAssessment with assessmentName {} and debtPositionTypeOrgCode {} for organization {}", assessmentName, debtPositionTypeOrgCode, organizationId);
-    return ResponseEntity.ok(assessmentsService.createAssessment(organizationId, assessmentName, debtPositionTypeOrgCode));
+  public ResponseEntity<Assessments> createAssessment(Long organizationId, String assessmentName, String debtPositionTypeOrgCode, String operatorExternalUserId) {
+    log.info("User requested createAssessment with assessmentName {}, debtPositionTypeOrgCode {} and operatorExternalUserId {} for organization {}", assessmentName, debtPositionTypeOrgCode, organizationId, operatorExternalUserId);
+    return ResponseEntity.ok(assessmentsService.createAssessment(organizationId, assessmentName, debtPositionTypeOrgCode, operatorExternalUserId));
   }
 
 }
