# src/main/java/it/gov/pagopa/pu/classification/model/Assessments.java
@@ -32,4 +32,5 @@ public class Assessments extends BaseEntity implements Serializable {
   private boolean printed;
   @NotNull
   private boolean flagManualGeneration;
+  private String operatorExternalUserId;
 }
